--- a/hyrise_rcm.conf
+++ b/hyrise_rcm.conf
@@ -3,4 +3,4 @@ start on runlevel [2345]
 stop on shutdown
 
 chdir /home/vagrant/hyrise_rcm
-exec /usr/bin/python3.5  app.py > server.log
+exec /usr/bin/python  app.py > server.log
