--- a/hyrise_rcm.conf
+++ b/hyrise_rcm.conf
@@ -2,5 +2,5 @@ description "Start hyrise dashboard"
 start on runlevel [2345]
 stop on shutdown
 
-chdir /home/vagrant/hyrise_rcm
-exec /usr/bin/python  app.py > server.log
+chdir /home/ubuntu/hyrise_rcm
+exec /usr/bin/python app.py > server.log
